--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,25 @@ dependencies:
   firebase_messaging: ^16.0.2
   cloud_firestore: ^6.0.2
   firebase_auth: ^6.1.0
+  cloud_functions: ^6.0.2
 
   google_sign_in: ^7.2.0
+
+  intl: ^0.17.0
 
   http: ^1.5.0
 
   camera: ^0.11.2
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
-
-  intl: ^0.17.0
-
+  
   image: ^4.5.4
+  cached_network_image: ^3.4.1
+  saver_gallery: ^4.0.1
+  url_launcher: ^6.3.2
+  image_picker: ^1.2.0
+
+
 
 dev_dependencies:
   flutter_test:
